Add create, update and delete hosts
